--- a/artworks.html
+++ b/artworks.html
@@ -205,6 +205,20 @@
         <div class="artwork-title">Particle Composer (2022)</div>
       </div>
     </a>
+
+      <a href="inverse_surveillance.html" class="artwork-link">
+      <div class="artwork">
+        <img src="images/Inverse_Surveillance.jpg" alt="">
+        <div class="artwork-title">Inverse:Surveillance (2022)</div>
+      </div>
+    </a>
+
+        <a href="rewind.html" class="artwork-link">
+      <div class="artwork">
+        <img src="images/REWIND.jpg" alt="">
+        <div class="artwork-title">Rewind (2022)</div>
+      </div>
+    </a>
   </div>
 
   <!-- Fixed rotating image bottom-left -->
